# ML_Decoder

./: infer.py  infer_demo_after_install.py  requirements.txt  run_infer.sh  setup.cfg
ml_decoder/: __init__.py  module.py
src_files/ml_decoder/: ml_decoder.py
src_files/models/utils/: factory.py
