[metadata]
name = ml_decoder
version = 0.0.1
description = ml_decoder model to recognize multiple classes
url = https://github.com/yizhe-mv/ML_Decoder

[options]
packages = find:
include_package_data = True
install_requires = file: requirements.txt

[options.packages.find]
exclude =
    pics
    pictures

